Fix ( facebookServiceImpl) : Replace selenium with httpClient, Clean code.
- Since selenium is slow i thought it'd be best to replace it with HttpClient, turns out that HttpClient is faster than how the page loads
 which leading to not being able to access the pages elements turns out selenium was better.
- Because of that, i returned back to selenium.
- Still researching a way to integrate these two operations.
- Had to restructure the whole FacebookServiceImpl code, just for better looks.